--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <a href="/" class="capitalize">jamez</a>
     <div aria-label="right part of navigation bar" class="my-flex gap-[10px] ml-auto">
         <ul aria-label="navigation links" class="my-flex ps-0 justify-evenly">
-            <li><a href="/works">Works</a></li>
+            <li (click)="scrollToSection('my-works-preview')"><a>Works</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact Me</a></li>
         </ul>
