--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -6,12 +6,14 @@
             <span class="font-bold">developer</span>
         </h1>
         <article class="subcaption pb-5">
-            <p class="mb-5">As an full stack developer using modern ideas simplicity design and universal visual identification
+            <p class="mb-5">As an full stack developer using modern ideas simplicity design and universal visual
+                identification
                 tailored to dedicated and current market</p>
             <button type="button"
-                class="my-flex ps-[15px] pe-[15px] pt-1 pb-1 gap-[5px] border border-solid border-black rounded-full font-[350] capitalize hover:bg-black hover:text-white transition-colors duration-200 group">
+                class="my-flex ps-[15px] pe-[15px] pt-1 pb-1 gap-[5px] my-btn rounded-full font-[350] capitalize hover:bg-black hover:text-white transition-colors duration-200 group">
                 explore
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="rotate-45 group-hover:rotate-180 transition-transform duration-200" viewBox="0 0 24 24">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    class="rotate-45 group-hover:rotate-180 transition-transform duration-200" viewBox="0 0 24 24">
                     <rect width="24" height="24" fill="none" />
                     <path fill="none" stroke="currentColor"
                         d="M5 8c.742 0 1.85-.733 2.78-1.475c1.2-.954 2.247-2.094 3.046-3.401C11.425 2.144 12 .956 12 0m0 0c0 .956.575 2.145 1.174 3.124c.8 1.307 1.847 2.447 3.045 3.401C17.15 7.267 18.26 8 19 8m-7-8v24" />
@@ -20,9 +22,48 @@
         </article>
     </div>
 </section>
-<section aria-label="tagline container" class="h-[85svh] my-flex justify-center">
-    <h1 class="text-center text-3xl">
+<section aria-label="tagline container" class="h-[100svh] flex justify-center sticky top-0" #taglinecontainer>
+    <h1 class="text-center text-3xl mt-[40svh]">
         <span class="block font-black mb-2">Designing the Future:</span>
-        Beautifully Intuitive and Technically Advanced Web Solutions
+        <span class="font-light text-[1em]">Beautifully Intuitive and Technically Advanced Web Solutions</span>
     </h1>
 </section>
+
+<div #containerbelow class="mt-[40svh] pt-[10svh]" id="my-works-preview">
+    <section class="grid-container h-dvh pt-5 pb-5 ps-5 pe-5 text-3xl bg-gray-600 relative z-10">
+        <h2
+            class="font-black text-[2.2em] uppercase mb-5 absolute -top-[0.9ch] left-1/2 -translate-x-1/2 text-gray-600">
+            My Works</h2>
+        <article class="my-flex justify-center border border-solid border-white w-full h-full text-[0.8em] text-white">
+            <p class="text-center capitalize">works overview...<br> mocukups, screenshots of my sites in a slideshow
+                thing</p>
+        </article>
+    </section>
+
+    <div class="my-flex gap-5 justify-evenly text-3xl pt-5 pb-5 ms-5 me-5"
+        aria-label='this is the section holding my work outcome e.g. leads, clients satisfaction rate, passion'
+        #workoutcome>
+        <article>
+            <h2 class="number">10</h2>
+            <p>leads</p>
+        </article>
+        <article>
+            <h2 class="number">95%</h2>
+            <p>satisfaction rate</p>
+        </article>
+        <article>
+            <h2 class="number"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 72 72">
+                    <rect width="72" height="72" fill="none" />
+                    <path fill="#9b9b9a" stroke="#9b9b9a" stroke-width="1"
+                        d="M36 39.44c-4.335 4.335-8.841 9.096-15.73 9.096c-7.141 0-12.24-5.271-12.24-12.58c.056-7.058 5.863-12.67 12.92-12.54c6.29 0 10.97 4.973 15.05 9.054c4.335-4.336 8.841-9.054 15.73-9.054c7.226 0 12.24 5.229 12.24 12.54c-.056 7.058-5.863 12.75-12.92 12.62c-6.29 0-10.97-5.057-15.05-9.137zm-3.4-3.444c-3.315-3.06-6.801-7.522-11.73-7.522a7.49 7.49 0 0 0-7.48 7.48c-.205 4.113 3.108 7.584 7.226 7.522c4.844 0 8.754-4.166 11.98-7.48zm26.01-.042a7.126 7.126 0 0 0-7.226-7.48c-4.846 0-8.756 4.165-11.99 7.48c3.315 3.06 6.8 7.522 11.73 7.522c4.129-.005 7.476-3.393 7.482-7.522z" />
+                    <g stroke="#000" stroke-linecap="round" stroke-width="1">
+                        <path fill="none"
+                            d="M36 32.51c4.335-4.336 8.841-9.096 15.73-9.096c7.226 0 12.24 5.271 12.24 12.58c-.056 7.058-5.863 12.71-12.92 12.58c-5.006 0-8.99-3.178-12.47-6.532m-2.581-2.564c-4.335 4.335-8.841 9.096-15.73 9.096c-7.141 0-12.24-5.271-12.24-12.58c.056-7.058 5.863-12.71 12.92-12.58c5.02 0 9.012 3.194 12.49 6.558m-3.476 3.475c-2.586-2.503-5.447-4.932-9.102-4.932a7.49 7.49 0 0 0-7.48 7.48a7.126 7.126 0 0 0 7.226 7.48c4.844 0 8.754-4.166 11.98-7.48m9.401 2.521c2.594 2.513 5.462 4.959 9.129 4.959a7.49 7.49 0 0 0 7.482-7.48h0a7.126 7.126 0 0 0-7.226-7.48c-4.846 0-8.756 4.165-11.99 7.48" />
+                        <path stroke-linejoin="round" d="m32.6 36l3.4-3.49m0 6.98L39.4 36" />
+                    </g>
+                </svg></h2>
+            <p>passion</p>
+        </article>
+    </div>
+
+</div>
