--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -12,3 +12,63 @@ ul.my-flex li:hover {
     text-decoration: underline;
     text-underline-offset: 5px;
 }
+
+.pseudo-body {
+    position: fixed;
+    top: 0;
+    left: 0;
+    inset: 0;
+    z-index: -1;
+}
+
+.pseudo-body.open-nav-bar {
+    z-index: 1;
+    background-color: #00000080;
+}
+
+#extra-nav-bar {
+    padding: 20px;
+    background-color: #f7f7f7;
+    position: fixed;
+    right: 0;
+    height: 100dvh;
+    width: 30%;
+    z-index: 2;
+    transform: translateX(100%);
+    transition: transform 250ms;
+}
+
+#extra-nav-bar.opened {
+    transform: translateX(0);
+    backdrop-filter: blur(1.5px);
+}
+
+#extra-nav-bar a {
+    font-size: 1.5em;
+    font-weight: 400;
+    position: relative;
+    padding-left: 30px;
+    opacity: 0.75;
+    transition-property: opacity, padding-left;
+    transition-duration: 250ms;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 20px;
+        height: 2.5px;
+        background-color: #000;
+        transition: width 500ms;
+    }
+
+    &:hover {
+        opacity: 1;
+        padding-left: 50px;
+    }
+
+    &:hover::before {
+        width: 30px;
+    }
+}
