--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,18 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    height: 100%;
+}
+
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    /* font-family: Roboto, "Helvetica Neue", sans-serif; */
 }
 
 .my-flex {
@@ -14,4 +24,17 @@ html {
 
 .my-btn {
     border: 1px solid black;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+h3 {
+    font-size: 1.17rem;
 }
