--- a/src/app/components/my-footer/my-footer.component.html
+++ b/src/app/components/my-footer/my-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="px-5 pt-5 pb-[1%] bg-gray-500">
+<footer class="px-5 pt-10 pb-[1%] bg-black-secondary">
     <h2 class="uppercase text-gray-50 pr-[2.5%] font-semibold w-4/6 mx-auto">
         <span class="font-bold">contact me</span>
         <br>
