created a sticky contact-me section, implemented responsiveness on the nav-bar and major components

--- a/src/app/components/my-footer/my-footer.component.html
+++ b/src/app/components/my-footer/my-footer.component.html
@@ -1,5 +1,5 @@
 <footer class="px-5 pt-10 pb-[1%] bg-black-secondary">
-    <h2 class="uppercase text-gray-50 pr-[2.5%] font-semibold w-4/6 mx-auto">
+    <h2 class="uppercase text-gray-50 font-semibold w-4/6 non-tablet-screen:w-5/6 mx-auto text-4xl">
         <span class="font-bold">contact me</span>
         <br>
         <a class="block w-fit ml-auto mt-5 lowercase" href="mailto:adobeclip2003@gmail.com">adobeclip2003&#64;gmail.com</a>
