--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
-<section class="my-flex ps-5 pe-5 pt-3 pb-3">
+<section class="my-flex px-5 py-3 phone-small-screen:px-4">
     <a href="/" class="capitalize">jamez</a>
-    <div aria-label="right part of navigation bar" class="my-flex gap-[10px] ml-auto">
+    <div aria-label="right part of navigation bar" class="my-flex gap-[10px] phone-small-screen:gap-2 ml-auto">
         <ul aria-label="navigation links" class="my-flex ps-0 justify-evenly">
             <li (click)="scrollToSection('my-works-preview')"><a>Works</a></li>
             <li><a href="/about">About</a></li>
