--- a/src/app/pages/drop-feedback/drop-feedback.component.html
+++ b/src/app/pages/drop-feedback/drop-feedback.component.html
@@ -1,5 +1,5 @@
-<div class="px-5 w-[70%] mx-auto">
-    <h1 class="mt-5">Hey There! Kindly drop a Feedback</h1>
+<div class="px-5 w-[80%] phone-large-screen:w-[85%] phone-small-screen:w-full mx-auto">
+    <h1 class="mt-5 mb-4 leading-none">Hey There! <br> Kindly drop a Feedback</h1>
     <p>I value your feedback! Share your thoughts on our collaboration.</p>
 
     <section aria-label="do you want to give your feedback anonymous or not?" class="mt-5 mb-2">
