--- a/src/app/components/my-footer/my-footer.component.css
+++ b/src/app/components/my-footer/my-footer.component.css
@@ -1,13 +1,14 @@
 footer > h2 {
-    font-size: 1.25rem;
+    /* @apply text-3xl; */
 
-    @apply non-tablet-screen:text-base;
+
+    /* @apply non-tablet-screen:text-base; */
 }
 h2 > span {
-    font-size: calc(1.75em * 1.618);
+    /* font-size: calc(1.75em * 1.618); */
 }
 h2 > a {
-    font-size: 1.75em;
+    font-size: calc(1em / 1.618);
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
