--- a/src/app/pages/drop-feedback/drop-feedback.component.css
+++ b/src/app/pages/drop-feedback/drop-feedback.component.css
@@ -19,6 +19,11 @@ mat-slider {
     }
 }
 
+.mat-expanded mat-expansion-panel-header {
+    text-decoration: underline;
+    transform: scale(1.1);
+}
+
 .submit-feedback-button {
     border-radius: 0;
     margin-top: 20px;
