--- a/src/app/components/contact-me/contact-me.component.css
+++ b/src/app/components/contact-me/contact-me.component.css
@@ -16,13 +16,18 @@
     }
 }
 
+.contact-me-container,
+.contact-me-container.opened {
+    transition: transform 200ms ease;
+    transform: translateY(0);
+}
+
 .contact-me-container {
     @apply text-3xl;
 
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
     width: 100%;
-    transition: transform 200ms ease;
     position: absolute;
     bottom: 0;
     z-index: 10;
@@ -32,9 +37,16 @@
     }
 
     & :not(h1, form) {
+        font-size: calc(1em / (1.618/1.25));
+    }
+
+    &>a {
         font-size: calc(1em / (1.618/1.15));
     }
 
+    & form button {
+        /* font-size: 0.5em; */
+    }
 }
 
 .contact-me-container fieldset {
@@ -53,13 +65,21 @@
 .contact-me-container form {
     @apply pb-5;
 
-    & > * {
+    &>* {
         width: 90%;
     }
 
     button {
+        border-radius: 5px;
+        margin-top: 15px;
         margin-inline: auto;
         background-color: var(--purple);
         color: #fff;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .contact-me-container fieldset {
+        margin-inline: 0;
     }
 }
