--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -132,6 +132,27 @@ section[aria-label="Heros Section"] h1 span {
     object-position: left 100%;
 }
 
+.open-say-hi-container {
+    -webkit-text-stroke: 1px #000;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-weight: 500;
+    letter-spacing: 0.25px;
+    font-size: 1.15rem;
+    text-transform: capitalize;
+    animation: blinking 500ms infinite alternate ease-in-out;
+}
+
+@keyframes blinking {
+    from {
+        color: rgb(0, 0, 0, 0);
+    }
+
+    to {
+        color: rgb(0, 0, 0, 1);
+    }
+}
+
 /* RESPONSIVENESS */
 @media screen and (max-width: 520px) {
 
